objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DIN__c</fullName>
        <label>DIN #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_CDFO__c</fullName>
        <label>Form CDFO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Price__c</fullName>
        <label>Final Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generic_Name__c</fullName>
        <label>Generic Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Size__c</fullName>
        <label>Package Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strength_Unit__c</fullName>
        <label>Strength Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Of_Administration__c</fullName>
        <label>Route Of Administration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Generic_Name__c</columns>
        <columns>DIN__c</columns>
        <columns>UPC__c</columns>
        <columns>Strength__c</columns>
        <columns>Strength_Unit__c</columns>
        <columns>Package_Size__c</columns>
        <columns>Form_CDFO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>